--- a/appfrontend/public/index.html
+++ b/appfrontend/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Agri SCM | 1.0.0</title>
+    <title>SCM | 1.0.0</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
